--- a/src/assets/scss/_theme-variables.scss
+++ b/src/assets/scss/_theme-variables.scss
@@ -11,7 +11,7 @@ $breakpoint-xl: 1200px;
   --font-size-small: 12px;
   
   --primary-color: #5C2941;
-  --header-bg: #5C2941;
+  --header-bg: #24292e;
 
   --home-link-color: #A1613F;
   --home-link-hover-color:  var(--primary-color);
