--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,6 +1,14 @@
 @import "theme-variables";
 @import "defaults";
 @import "lib/css-grid-utility";
+@import "variables";
+@import "extras";
+@import "layout";
+@import "stylestailwind";
+
+
+
+
 
 // .primary-container {
 // 	display: grid;
@@ -12,11 +20,11 @@
 }
 .site-header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   position: relative;
   background: var(--header-bg);
-  padding: 30px 20px;
+  padding: 10px 20px;
 }
 .site-navigation {
   ul {
@@ -94,9 +102,25 @@
 }
 .container {
 	margin: 0 auto;
-	max-width: 1240px;
-	padding: 0 20px;
+	max-width: 70vw;
+	padding: 0 100px;
 }
+
+.container-hero{
+	max-width: 100vw;
+}
+.text-hero{
+	width: 40%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-content: center;
+}
+
+.text-center{
+	text-align: center;
+}
+
 .site-logo {
   font-weight: bold;
   a {
@@ -114,8 +138,17 @@
 .logo{
 	width: 60px;
 }
+
+
 .home-banner {
 	padding: 60px 0;
+	background-image: url('../../../static/assets/hero.png');
+	height: 70vh;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+	display: flex;
+	justify-content: center;
 	align-items: center;
 	.title {
 		font-size: 48px;
