--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -10,11 +10,13 @@
 
 
 
-// .primary-container {
-// 	display: grid;
-// 	grid-template-rows: 60px auto 60px;
-// 	min-height: 100vh;
-// }
+primary-container {
+display: grid;
+grid-template-rows: 60px auto 60px;
+min-height: 100vh;
+}
+
+
 .primary-container main {
 	min-height: calc(100vh - 60px - 81px);
 }
@@ -102,13 +104,11 @@
 }
 .container {
 	margin: 0 auto;
-	max-width: 70vw;
-	padding: 0 100px;
+	max-width: 1240px;
+	padding: 0 20px;
 }
 
-.container-hero{
-	max-width: 100vw;
-}
+
 .text-hero{
 	width: 40%;
 	display: flex;
