--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -146,7 +146,7 @@ min-height: 100vh;
 
 .home-banner {
 	padding: 60px 0;
-	background-image: url('../../../static/assets/hero.png');
+	background-image: url('../../../static/assets/hero-cover.png');
 	height: 70vh;
 	background-repeat: no-repeat;
 	background-position: center;
