--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -24,12 +24,13 @@ min-height: 100vh;
 
 
 .site-header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  position: relative;
-  background: var(--header-bg);
-  padding: 10px 20px;
+display: flex;
+justify-content: space-around;
+align-items: center;
+position: relative;
+background: black;
+padding: 10px 20px;
+height: 90px;
 }
 .site-navigation {
   ul {
@@ -112,13 +113,16 @@ min-height: 100vh;
 .container-list-blog {
 	max-width: 1240px}
 
-
+.announcement-button{
+	padding: 0;;
+}
 .text-hero{
-	width: 40%;
+	width: 45%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-content: center;
+	color: white;
 }
 
 .text-center{
@@ -152,8 +156,9 @@ min-height: 100vh;
 	background-position: center;
 	background-size: cover;
 	display: flex;
-	justify-content: center;
+	justify-content: left;
 	align-items: center;
+	padding: 0 10%;
 	.title {
 		font-size: 48px;
 		line-height: 48px;
