--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -54,7 +54,7 @@ height: 90px;
     margin-left: 20px;
   }
   a {
-    color: rgba(255,255,255,0.6);
+    color:#fff;
     text-decoration: none;
 
   }
@@ -151,21 +151,22 @@ height: 90px;
 }
 
 .logo{
-	width: 60px;
+	width: 50px;
 }
 
 
 .home-banner {
 	padding: 60px 0;
 	background-image: url('../../../static/assets/hero-cover.png');
-	height: 70vh;
+	height: 80vh;
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
 	display: flex;
 	justify-content: left;
 	align-items: center;
-	padding: 0 10%;
+	padding: 10% 10%;
+	width: inherit;
 
 		.title {
 			font-size: 101px;
