--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -69,6 +69,27 @@
   }
 }
 
+
+
+.allies-container{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: $lg !important;
+
+
+
+  div{
+    width: 100%;
+    line-height: 30px;
+    img{
+      width: 20%;
+      align-self: center;
+      margin: 15px;
+    }
+  }
+}
+
 .container-fix{
   width: -moz-available;
 }
