se corrige vista de logos aliados en escritorio y responsive

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -281,6 +281,11 @@ height: 90px;
 	
 		}
 
+		
+.allies-container{
+  max-width: 90% !important;
+}
+
 	
 .presentation-container{
 	flex-direction: column-reverse;
