--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -72,22 +72,20 @@
 
 
 .allies-container{
-  width: 100%;
   display: flex;
   flex-direction: column;
   margin-top: $lg !important;
+  max-width: 1240px;
 
 
 
-  div{
-    width: 100%;
-    line-height: 30px;
+ 
     img{
       width: 20%;
       align-self: center;
       margin: 15px;
     }
-  }
+  
 }
 
 .container-fix{
