se posiciona imagen de encabezado en blog

--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -18,6 +18,10 @@
   width: 100%;
 }
 
+.zero-max-width{
+  max-width:inherit !important;
+}
+
 .presentation-container{
   width: 100%;
   height: inherit;
