--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -19,7 +19,10 @@ min-height: 100vh;
 .description {
 	font-size: 30px;
 	line-height: 1.4;
-	margin-bottom: 30px;
+
+	p{
+		margin-top: 0px;
+	}
 }
 .primary-container main {
 	min-height: calc(100vh - 60px - 81px);
@@ -173,13 +176,13 @@ height: 90px;
 	justify-content: left;
 	align-items: center;
 	padding: 10% 10%;
-	width: inherit;
+	width: 100vw;
 
 		.title {
-			font-size: 101px;
-			line-height: 90px;
-			margin: 0 0 5px;
-			font-weight: 900;
+			font-size: 75px;
+		line-height: 59px;
+		margin: 0 0 5px;
+		font-weight: normal;
 
 	}
 	.tagline {
