se agregan redes sociales a footer

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -502,7 +502,9 @@ article img {
 	text-align: center;
 	font-size: 14px;
 	padding: 20px 0;
+	height: fit-content;
 	p {
+		font-size: 20px; 
 		margin: 0;
 		color: #777
 	}
