--- a/src/assets/scss/_layout.scss
+++ b/src/assets/scss/_layout.scss
@@ -81,9 +81,6 @@
   margin-top: $lg !important;
   max-width: 1240px;
 
-
-
- 
     img{
       width: 20%;
       align-self: center;
@@ -91,6 +88,24 @@
     }
   
 }
+
+.container-rrss{
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  align-items: center;
+  
+}
+
+.icons-rrss{
+  a{
+    img{ 
+      width: 50px;
+      margin-right: 10px;
+    }
+  }
+}
+
 
 .container-fix{
   width: -moz-available;
