se quita focus de input de formulario de registro

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -8,7 +8,11 @@
 
 
 
-
+input:focus {
+	outline-color: -webkit-focus-ring-color;
+	outline-style: auto;
+	outline-width: 0px !important;
+}
 
 .primary-container {
 display: grid;
