se agrega link de publicación para compartir de facebook

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -317,6 +317,14 @@ height: 90px;
   max-width: 90% !important;
 }
 
+.img-hero-register{
+	width: 100%;
+  margin-top: 30px;
+}
+
+.copy-register{
+	width: 85% !important;
+}
 	
 .presentation-container{
 	flex-direction: column-reverse;
