--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -14,6 +14,14 @@ input:focus {
 	outline-width: 0px !important;
 }
 
+.title {
+	font-size: 75px;
+line-height: 59px;
+margin: 0 0 5px;
+font-weight: normal;
+
+}
+
 .primary-container {
 display: grid;
 grid-template-rows: 60px auto 60px;
