--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -31,6 +31,10 @@ font-weight: normal;
 
 }
 
+.line-height{
+	line-height: 0.2;
+}
+
 .primary-container {
 display: grid;
 grid-template-rows: 60px auto 60px;
@@ -296,6 +300,26 @@ height: 90px;
 }
 @media (max-width: $breakpoint-sm) {
 
+	.line-height{
+		line-height: 0.8;
+	}
+
+
+
+.form-register-batch{
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+
+
+.form-register-batch div{
+	width: 80% !important;
+}
+
   iframe{
 		width: 90%;
 	 }
@@ -376,6 +400,8 @@ line-height: 48px !important;
 	.button-responsive{
 		padding: 20px !important;
 		width: 77% !important;
+		display: flex;
+    justify-content: center;
 	}
 
 	.announcement-button{
