--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -279,7 +279,13 @@ height: 90px;
 		.featured-image {
 			border-radius: 12px 12px 0 0;
 		}
+
+	
 	}
+
+	
+
+	
 }
 .article-header {
   padding: 35px 0;
@@ -302,6 +308,14 @@ height: 90px;
 
 	.line-height{
 		line-height: 0.8;
+	}
+
+	.padding-responsive-contaner{
+		padding: 20px;
+	}
+	
+	.button{
+		width: 80%;
 	}
 
 
@@ -430,6 +444,10 @@ background-size: 260vh;
     min-height: 300px;
   }
 }
+
+
+
+
 article figure {
 	margin: 40px 0;
 	text-align: center;
